[package]
name = "zeroclaw-ios-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "iOS C-FFI bridge for ZeroClaw (static library)"

[lib]
crate-type = ["staticlib"]
name = "zeroclaw_ios"

[dependencies]
zeroclaw = { path = "../..", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time"] }
anyhow = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
# HTTP client for gateway communication
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Minimal tracing for mobile
tracing = { version = "0.1", default-features = false }

# Note: binary-size optimization (opt-level="z", lto, codegen-units=1,
# panic="abort", strip) lives in the workspace root Cargo.toml's
# [profile.release]. Workspace members inherit it, and cargo will emit
# `profiles for the non root package will be ignored` if duplicated here.
