[package]
name = "cortex-mem-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level tools and utilities for Cortex Memory Integration"

[dependencies]
# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
log = "0.4"
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
futures = { workspace = true }

[features]
default = []
