[package]
name = "daemonclaw-install"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
description = "System installer for DaemonClaw — provisions OS users, directories, systemd units, and config"
repository.workspace = true
license.workspace = true

[[bin]]
name = "daemonclaw-install"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
