[package]
name = "lightwave-pyo3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PyO3 bindings for lightwave-sys — exposes Rust parsers to Python."

[lib]
name = "lightwave_sys"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
lightwave-sys = { path = "../.." }
serde_json = "1.0"
