[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lightwave-sys"
version = "0.1.0"
description = "Rust-powered parsers for LightWave (FDX screenplay parser)."
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "python"
module-name = "lightwave_sys"
